<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/titleAddGoal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_goal"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:textSize="20sp"
                />

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:backgroundTint="#0000ffff"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back"
                app:tint="@color/textPrimary" />



        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:text="@string/icon"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/topBar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <GridLayout
            android:id="@+id/selector1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            android:layout_margin="16dp"
            android:padding="2dp"
            android:columnCount="3"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/car"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/car"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tv"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/ic_baseline_tv_24"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/savings"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/ic_savings"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/medical"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/ic_medical"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/house"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/ic_house"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/others"
                android:layout_width="110dp"
                android:layout_height="100dp"
                style="@style/selector_button"
                app:iconGravity="textTop"
                app:icon="@drawable/ic_baseline_category_24"
                app:iconSize="32dp"
                android:textSize="10sp"
                app:iconPadding="12dp"

                tools:ignore="SmallSp" />



        </GridLayout>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:text="@string/details"
            android:textColor="@color/textPrimary"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/selector1"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:startIconDrawable="@drawable/ic_edit"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/goal_price"
            app:startIconDrawable="@drawable/ic_baseline_flag_24"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_money"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monthly_budget"
            app:startIconDrawable="@drawable/bahtsign"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/money"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_goal"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            app:startIconDrawable="@drawable/ic_calendar"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/goal"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:focusable="false"
                android:inputType="none"/>



        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/calclabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calculation_goal"
            app:startIconDrawable="@drawable/ic_baseline_estimate"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:boxCornerRadiusTopEnd="8dp"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calculation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/note"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:hint="@string/note"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:layout_marginTop="4dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/date"-->
        <!--            app:boxCornerRadiusTopEnd="8dp"-->
        <!--            app:boxCornerRadiusBottomStart="8dp"-->
        <!--            app:boxCornerRadiusTopStart="8dp"-->
        <!--            app:boxCornerRadiusBottomEnd="8dp"-->

        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/edit_note"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="110dp"-->
        <!--                android:maxLength="300"-->
        <!--                android:gravity="top"-->
        <!--                android:inputType="textMultiLine"/>-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <Button
            android:id="@+id/add_transaction"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calclabel"
            android:text="@string/add_goal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/firstblue"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>